# devaipod

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Containerfile  Justfile  Makefile  README.md  RELATED.md  devenv-init-devaipod.sh  devfile.yaml  integration.sh  secrets.toml.example
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  publish-feature.yaml  publish-oci.yaml  release.yaml
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs  main.rs
crates/integration-tests/src/tests/: cli.rs  container.rs  mod.rs
crates/upcalls/: Cargo.toml
crates/upcalls/src/: config.rs  gh_restricted.rs  lib.rs
docs/: ROADMAP.md  bootc-compat.md  e2e-testing.md  nested-podman.md  opencode.md  pivot-devpod-multi.md  relationship-ambient-code.md  relationship-auto-claude.md  relationship-continue.md  sandboxing.md  secrets.md  service-gator.md
docs/todo/: devcontainer-feature.md  upcalls-portals.md
examples/: devc.toml
features/.github/workflows/: release.yaml
features/src/devaipod/: NOTES.md  devcontainer-feature.json  install.sh
features/test/devaipod/: test.sh
patches/: 0001-devenv-init-support-nested-podman.patch
src/: compose.rs  config.rs  consts.rs  devcontainer.rs  devfile.rs  devpod.rs  forge.rs  git.rs  gpu.rs  init.rs  main.rs  pod.rs  podman.rs  proxy.rs  secrets.rs  service_gator.rs  state.rs  tmux.rs  upcall.rs  workspace.rs
tests/: integration.rs
tests/fixtures/simple-devcontainer/.devcontainer/: devcontainer.json
tests/fixtures/simple-project/: README.md  mock-agent.sh
tests/fixtures/simple-project/.devcontainer/: Dockerfile  devcontainer.json
tests/fixtures/simple-project/src/: main.rs
