[workspace]
members = [".", "crates/upcalls", "crates/integration-tests"]
resolver = "2"

[package]
name = "devaipod"
version = "0.1.0"
edition = "2021"
description = "Sandboxed AI coding agents in reproducible dev environments"
repository = "https://github.com/cgwalters/devaipod"
readme = "README.md"
keywords = ["devcontainer", "ai", "agents", "devpod", "containers"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
rand = "0.9.2"
rustix = { version = "1.1.3", features = ["process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
