[workspace]
members = [".", "crates/integration-tests"]
resolver = "2"

[package]
name = "devaipod"
version = "0.1.0"
edition = "2021"
description = "Sandboxed AI coding agents in reproducible dev environments"
repository = "https://github.com/cgwalters/devaipod"
readme = "README.md"
keywords = ["devcontainer", "ai", "agents", "devpod", "containers"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[dependencies]
bollard = "0.18"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
futures-util = "0.3"
rand = "0.9.2"
rustix = { version = "1.1.3", features = ["process"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "io-std", "time", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
