[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Disable automatic binary discovery to avoid conflicts with test target
autobins = false

[[test]]
name = "integration-tests"
path = "src/main.rs"
harness = false

[dependencies]
color-eyre = "0.6"
libtest-mimic = "0.7.3"
linkme = "0.3.30"
paste = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "allow"  # Required for linkme
