[package]
name = "devaipod-upcalls"
version = "0.1.0"
edition = "2021"
description = "Upcall wrapper binaries for devaipod sandboxed agents"
license = "MIT OR Apache-2.0"

[[bin]]
name = "gh-restricted"
path = "src/bin/gh_restricted.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
